fixed gallery issues and black space on right side and added info to experience section

--- a/index.html
+++ b/index.html
@@ -53,83 +53,82 @@
     <div id="experience-section" class="container-fluid">
       <div class="text">
         <h1>Experience:</h1>
-        <p>We have been in the buisness for 15 years. Creating parts for many companies like Brothers, _______________ and have repaired and produced parts for a variety of machines. Give us a call and we can come to a pricing agreement. (We speak spanish and english.)</p>
+        <p>We have been in the buisness for 15 years. Creating parts for many companies like Brothers, Hand and Nail Harmony, and B&E Manufacturing. We have repaired and produced parts for a variety of machines. Give us a call and we can come to a pricing agreement.</p>
+        <p>(We speak English and Spanish.)</p>
       </div>
     </div>
 
 
-
-
-
-
     <div id="parts-section" class="container-fluid">
       <!-- Page Content --> <!-- ***********************-->
-      <div class="container text">
-
-        <h1>Parts we have created:</h1>
+      <div class="container">
+        <div class="writing row text-center d-block">
+          <h1>Parts we have created:</h1>
+          <p></p>
+        </div>
 
         <hr class="mt-2 mb-5">
 
         <div class="row text-center text-lg-left">
 
-          <div class="col-lg-3 col-md-4 col-6">
+          <div class="col-lg-3 col-md-4 col-6 text-center">
             <a href="#" class="d-block mb-4 h-100">
-                  <img class="img-fluid img-thumbnail" src="/img/product1.jpg" alt="">
+                  <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/LJtkxGXw/product1.jpg" alt="">
                 </a>
           </div>
-          <div class="col-lg-3 col-md-4 col-6">
+          <div class="col-lg-3 col-md-4 col-6 text-center">
             <a href="#" class="d-block mb-4 h-100">
-                  <img class="img-fluid img-thumbnail" src="/img/product2.jpg" alt="">
+                  <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/s1LJxpq6/product2.jpg" alt="">
                 </a>
           </div>
-          <div class="col-lg-3 col-md-4 col-6">
+          <div class="col-lg-3 col-md-4 col-6 text-center">
             <a href="#" class="d-block mb-4 h-100">
-                  <img class="img-fluid img-thumbnail" src="/img/product3.jpg" alt="">
+                  <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/LYXz6XTF/product3.jpg" alt="">
                 </a>
           </div>
-          <div class="col-lg-3 col-md-4 col-6">
+          <div class="col-lg-3 col-md-4 col-6 text-center">
             <a href="#" class="d-block mb-4 h-100">
-                  <img class="img-fluid img-thumbnail" src="/img/product4.jpg" alt="">
+                  <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/ygb0JHQg/product4.jpg" alt="">
                 </a>
           </div>
-          <div class="col-lg-3 col-md-4 col-6">
+          <div class="col-lg-3 col-md-4 col-6 text-center">
             <a href="#" class="d-block mb-4 h-100">
-                  <img class="img-fluid img-thumbnail" src="/img/product5.jpg" alt="">
+                  <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/MffVVFNs/product5.jpg" alt="">
                 </a>
           </div>
-          <div class="col-lg-3 col-md-4 col-6">
+          <div class="col-lg-3 col-md-4 col-6 text-center">
             <a href="#" class="d-block mb-4 h-100">
-                  <img class="img-fluid img-thumbnail" src="/img/product6.jpg" alt="">
+                  <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/jWRHmvn5/product6.jpg" alt="">
                 </a>
           </div>
-          <div class="col-lg-3 col-md-4 col-6">
+          <div class="col-lg-3 col-md-4 col-6 text-center">
             <a href="#" class="d-block mb-4 h-100">
-                  <img class="img-fluid img-thumbnail" src="/img/product7.jpg" alt="">
+                  <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/8FwRSWLb/product7.jpg" alt="">
                 </a>
           </div>
-          <div class="col-lg-3 col-md-4 col-6">
+          <div class="col-lg-3 col-md-4 col-6 text-center">
             <a href="#" class="d-block mb-4 h-100">
-                  <img class="img-fluid img-thumbnail" src="/img/product8.jpg" alt="">
+                  <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/FY43kGZZ/product8.jpg" alt="">
                 </a>
           </div>
-          <div class="col-lg-3 col-md-4 col-6">
+          <div class="col-lg-3 col-md-4 col-6 text-center">
             <a href="#" class="d-block mb-4 h-100">
-                  <img class="img-fluid img-thumbnail" src="/img/product9.jpg" alt="">
+                  <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/LJtkxGXw/product9.jpg" alt="">
                 </a>
           </div>
-          <div class="col-lg-3 col-md-4 col-6">
+          <div class="col-lg-3 col-md-4 col-6 text-center">
             <a href="#" class="d-block mb-4 h-100">
-                  <img class="img-fluid img-thumbnail" src="/img/product10.jpg" alt="">
+                  <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/4K4cBdjH/product10.jpg" alt="">
                 </a>
           </div>
-          <div class="col-lg-3 col-md-4 col-6">
+          <div class="col-lg-3 col-md-4 col-6 text-center">
             <a href="#" class="d-block mb-4 h-100">
-                  <img class="img-fluid img-thumbnail" src="/img/product11.jpg" alt="">
+                  <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/HJSyKmCZ/product11.jpg" alt="">
                 </a>
           </div>
-          <div class="col-lg-3 col-md-4 col-6">
+          <div class="col-lg-3 col-md-4 col-6 text-center">
             <a href="#" class="d-block mb-4 h-100">
-                  <img class="img-fluid img-thumbnail" src="/img/product12.jpg" alt="">
+                  <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/hzfdRYDS/product12.jpg" alt="">
                 </a>
           </div>
         </div>
