added different fonts on different page sizes and create call to action section and added media queries

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html#image-section">About Us</a>
+            <a class="nav-link" href="index.html#about-section">About Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="index.html#experience-section">Experience</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html#parts-section">Services</a>
+            <a class="nav-link" href="index.html#work-section">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html#footer">Contact</a>
+            <a class="nav-link" href="index.html#call-to-action-section">Contact</a>
           </li>
 
           <!-- <li class="nav-item">
@@ -41,10 +41,10 @@
     </nav>
 
 
-    <div id="image-section" class="container-fluid">
+    <div id="about-section" class="container-fluid">
        <div class="text">
-         <h1>What we do:</h1>
-         <p> We are a Manual Lathe Milling and Welding company that can repair, create, and weld any part you might need.</p>
+         <h1>About Us:</h1>
+         <p> We are a Manual Lathe Milling and Welding company that can repair, create, and weld any part you might need. We are located in Orange County.</p>
          <!-- <button type="button" name="button">Learn More</button> -->
        </div>
     </div>
@@ -59,11 +59,11 @@
     </div>
 
 
-    <div id="parts-section" class="container-fluid">
+    <div id="work-section" class="container-fluid">
       <!-- Page Content --> <!-- ***********************-->
       <div class="container">
         <div class="writing row text-center d-block">
-          <h1>Parts we have created:</h1>
+          <h1>Work Done:</h1>
           <p></p>
         </div>
 
@@ -72,62 +72,62 @@
         <div class="row text-center text-lg-left">
 
           <div class="col-lg-3 col-md-4 col-6 text-center">
-            <a href="#" class="d-block mb-4 h-100">
+            <a class="d-block mb-4 h-100">
                   <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/LJtkxGXw/product1.jpg" alt="">
                 </a>
           </div>
           <div class="col-lg-3 col-md-4 col-6 text-center">
-            <a href="#" class="d-block mb-4 h-100">
+            <a class="d-block mb-4 h-100">
                   <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/s1LJxpq6/product2.jpg" alt="">
                 </a>
           </div>
           <div class="col-lg-3 col-md-4 col-6 text-center">
-            <a href="#" class="d-block mb-4 h-100">
+            <a class="d-block mb-4 h-100">
                   <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/LYXz6XTF/product3.jpg" alt="">
                 </a>
           </div>
           <div class="col-lg-3 col-md-4 col-6 text-center">
-            <a href="#" class="d-block mb-4 h-100">
+            <a class="d-block mb-4 h-100">
                   <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/ygb0JHQg/product4.jpg" alt="">
                 </a>
           </div>
           <div class="col-lg-3 col-md-4 col-6 text-center">
-            <a href="#" class="d-block mb-4 h-100">
+            <a class="d-block mb-4 h-100">
                   <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/MffVVFNs/product5.jpg" alt="">
                 </a>
           </div>
           <div class="col-lg-3 col-md-4 col-6 text-center">
-            <a href="#" class="d-block mb-4 h-100">
+            <a class="d-block mb-4 h-100">
                   <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/jWRHmvn5/product6.jpg" alt="">
                 </a>
           </div>
           <div class="col-lg-3 col-md-4 col-6 text-center">
-            <a href="#" class="d-block mb-4 h-100">
+            <a class="d-block mb-4 h-100">
                   <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/8FwRSWLb/product7.jpg" alt="">
                 </a>
           </div>
           <div class="col-lg-3 col-md-4 col-6 text-center">
-            <a href="#" class="d-block mb-4 h-100">
+            <a class="d-block mb-4 h-100">
                   <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/FY43kGZZ/product8.jpg" alt="">
                 </a>
           </div>
           <div class="col-lg-3 col-md-4 col-6 text-center">
-            <a href="#" class="d-block mb-4 h-100">
+            <a class="d-block mb-4 h-100">
                   <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/LJtkxGXw/product9.jpg" alt="">
                 </a>
           </div>
           <div class="col-lg-3 col-md-4 col-6 text-center">
-            <a href="#" class="d-block mb-4 h-100">
+            <a class="d-block mb-4 h-100">
                   <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/4K4cBdjH/product10.jpg" alt="">
                 </a>
           </div>
           <div class="col-lg-3 col-md-4 col-6 text-center">
-            <a href="#" class="d-block mb-4 h-100">
+            <a class="d-block mb-4 h-100">
                   <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/HJSyKmCZ/product11.jpg" alt="">
                 </a>
           </div>
           <div class="col-lg-3 col-md-4 col-6 text-center">
-            <a href="#" class="d-block mb-4 h-100">
+            <a class="d-block mb-4 h-100">
                   <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/hzfdRYDS/product12.jpg" alt="">
                 </a>
           </div>
@@ -136,32 +136,44 @@
       <!-- /.container -->
 
     </div>
+    <!-- END OF WORK SECTION -->
 
 
+    <!-- START CALL-TO-ACTION SECTION -->
+    <div id="call-to-action-section" class="container-fluid">
+      <div class="text">
+        <h1>Call Us Today for a Quote!</h1>
+        <p>Give us a call and we can come to a pricing agreement.</p>
+        <p>(Hablamos Español)</p>
+        <h5>Denos una llamada y le daremos un precio.<h5>
+          <a class="telephone" href="tel:+15555551212">714-317-3860</a>
+      </div>
+    </div>
+
+    <!-- END CALL-TO-ACTION SECTION -->
 
     <!-- START OF FOOTER -->
     <footer>
       <div class="footer" id="footer">
-          <div class="container">
-              <div class="row">
-                  <div class="col-lg-6 col-md-6 col-sm-5 col-xs-6" id="company-name">
+          <div class="container-fluid">
+              <div class="row" style="padding: 0px;">
+                  <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 company-name">
                       <h4> JP Machine </h4>
                   </div>
-                  <div class="col-lg-3 col-sm-3.5 col-xs-3" id="contact-links">
+                  <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 contact-links">
                       <h3> Contact </h3>
                       <ul>
-                        <li><a class="telephone"href="#"> (714) 317-3860 </a></li>
-                        <li><a class="email"href="#"> jpmachinestanton@gmail.com </a></li>
+                        <li><a class="telephone" href="tel:+15555551212">714-317-3860</a></li>
+                        <li><a class="email" href="mailto:jpmachinestanton@gmail.com"> jpmachinestanton@gmail.com </a></li>
                         <br/>
                         <li> <p> Located in Stanton, California </p> </li>
-                        <!-- <li> <p>address line two</p> </li> IF NEEDED -->
                       </ul>
                   </div>
-                  <div class="col-lg-3 col-sm-3.5 col-xs-3" id="bottom-links" style="">
+                  <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 bottom-links" style="">
                       <ul>
-                          <li> <h5> <a href="#image-section" style="margin-top: 3em"> ABOUT US</a> <h5></li>
+                          <li> <h5> <a href="#about-section" style="margin-top: 3em"> ABOUT US</a> <h5></li>
                           <li> <h5><a href="#experience-section"> EXPERIENCE </a> <h5></li>
-                          <li> <h5><a href="#parts-section"> WORK DONE </a> <h5></li>
+                          <li> <h5><a href="#work-section"> WORK DONE </a> <h5></li>
                       </ul>
                   </div>
 
@@ -169,22 +181,12 @@
           </div>
           <!--/.container-->
 
-
-
-
-
-
-
-
-
-
-
       </div>
       <!--/.footer-->
 
       <div class="footer-bottom">
-          <div class="container">
-              <p class="copyright"> Copyright © JP Machine 2019. All right reserved. </p>
+          <div class="container-fluid">
+              <p class="copyright"> Copyright © JP Machine 2020. All right reserved. </p>
 
           </div>
       </div>
