--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>JP Machine</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Inria+Serif|Kulim+Park|Montserrat|Rock+Salt&display=swap" rel="stylesheet">
 
   </head>
   <body>
@@ -146,7 +147,7 @@
         <p>Give us a call and we can come to a pricing agreement.</p>
         <p>(Hablamos Español)</p>
         <h5>Denos una llamada y le daremos un precio.<h5>
-          <a class="telephone" href="tel:+15555551212">714-317-3860</a>
+          <a class="telephone" href="tel:+17143173860">714-317-3860</a>
       </div>
     </div>
 
@@ -163,7 +164,7 @@
                   <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 contact-links">
                       <h3> Contact </h3>
                       <ul>
-                        <li><a class="telephone" href="tel:+15555551212">714-317-3860</a></li>
+                        <li><a class="telephone" href="tel:+17143173860">714-317-3860</a></li>
                         <li><a class="email" href="mailto:jpmachinestanton@gmail.com"> jpmachinestanton@gmail.com </a></li>
                         <br/>
                         <li> <p> Located in Stanton, California </p> </li>
