--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>JP Machine</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Inria+Serif|Kulim+Park|Montserrat|Rock+Salt&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Inria+Serif|Kulim+Park|Montserrat|Ibarra+Real+Nova|Rock+Salt&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/70d2219815.js" crossorigin="anonymous"></script>
 
   </head>
   <body>
@@ -43,115 +44,144 @@
 
 
     <div id="about-section" class="container-fluid">
-       <div class="text">
-         <h1>About Us:</h1>
-         <p> We are a Manual Lathe Milling and Welding company that can repair, create, and weld any part you might need. We are located in Orange County.</p>
-         <!-- <button type="button" name="button">Learn More</button> -->
-       </div>
-    </div>
+           <div class="text">
+             <h1>About Us:</h1>
+             <p> We are a Manual Lathe Milling and Welding company that can repair, create, and weld any part you might need. We know English and Spanish and are located in Orange County.</p>
+             <a class="telephone" href="tel:+17143173860"><button type="button" class="btn btn-primary">Contact Us</button></a>
 
-
-    <div id="experience-section" class="container-fluid">
-      <div class="text">
-        <h1>Experience:</h1>
-        <p>We have been in the buisness for 15 years. Creating parts for many companies like Brothers, Hand and Nail Harmony, and B&E Manufacturing. We have repaired and produced parts for a variety of machines. Give us a call and we can come to a pricing agreement.</p>
-        <p>(We speak English and Spanish.)</p>
-      </div>
-    </div>
-
-
-    <div id="work-section" class="container-fluid">
-      <!-- Page Content --> <!-- ***********************-->
-      <div class="container">
-        <div class="writing row text-center d-block">
-          <h1>Work Done:</h1>
-          <p></p>
+           </div>
         </div>
 
-        <hr class="mt-2 mb-5">
 
-        <div class="row text-center text-lg-left">
+        <div id="experience-section" class="container-fluid text-center">
+          <div class="text container">
+            <h1>Experience:</h1>
+            <p>We have been in the buisness for 15 years. Creating parts for many companies like Brothers, Hand and Nail Harmony, and B&E Manufacturing. We have repaired and produced parts for a variety of machines. Give us a call and we can come to a pricing agreement.</p>
+            <p>(We speak English and Spanish.)</p>
+          </div>
+          <div class="boxes-area text container">
+            <h1>Why us?</h1>
+            <div class="boxes row justify-content-between text-center">
+              <div class="box col col-lg-3 col-sm-6 col-xs-12 text-center ">
+                <i class="fa fa-trophy" aria-hidden="true"></i>
+                <h4>Quality</h4>
+                <p>Everything we make is quality work and nothing less. We have high standard for our work.</p>
+              </div>
+              <div class="">
 
-          <div class="col-lg-3 col-md-4 col-6 text-center">
-            <a class="d-block mb-4 h-100">
-                  <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/LJtkxGXw/product1.jpg" alt="">
-                </a>
+              </div>
+              <div class="box col col-lg-3 col-sm-6 col-xs-12 text-center">
+                <i class="fa fa-clock-o" aria-hidden="true"></i>
+                <h4>Timely</h4>
+                <p>Every order is given on the agreed timeframe everytime.</p>
+              </div>
+              <div class="">
+
+              </div>
+              <div class="box col col-lg-3 col-sm-12 col-xs-12 text-center">
+                <i class="fa fa-book" aria-hidden="true"></i>
+                <h4>Experience</h4>
+                <p>We have 15 years of experience in this industry, which means you can trust us to know what we are doing. </p>
+              </div>
+            </div>
+
           </div>
-          <div class="col-lg-3 col-md-4 col-6 text-center">
-            <a class="d-block mb-4 h-100">
-                  <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/s1LJxpq6/product2.jpg" alt="">
-                </a>
+
+        </div>
+
+
+        <div id="work-section" class="container-fluid">
+          <!-- Page Content --> <!-- ***********************-->
+          <div class="container">
+            <div class="writing row text-center d-block">
+              <h1>Work Done:</h1>
+              <p></p>
+            </div>
+
+            <hr class="mt-2 mb-5">
+
+            <div class="row text-center text-lg-left">
+
+              <div class="col-lg-3 col-md-4 col-6 text-center">
+                <a class="d-block mb-4 h-100">
+                      <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/LJtkxGXw/product1.jpg" alt="">
+                    </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-6 text-center">
+                <a class="d-block mb-4 h-100">
+                      <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/s1LJxpq6/product2.jpg" alt="">
+                    </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-6 text-center">
+                <a class="d-block mb-4 h-100">
+                      <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/LYXz6XTF/product3.jpg" alt="">
+                    </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-6 text-center">
+                <a class="d-block mb-4 h-100">
+                      <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/ygb0JHQg/product4.jpg" alt="">
+                    </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-6 text-center">
+                <a class="d-block mb-4 h-100">
+                      <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/MffVVFNs/product5.jpg" alt="">
+                    </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-6 text-center">
+                <a class="d-block mb-4 h-100">
+                      <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/jWRHmvn5/product6.jpg" alt="">
+                    </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-6 text-center">
+                <a class="d-block mb-4 h-100">
+                      <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/8FwRSWLb/product7.jpg" alt="">
+                    </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-6 text-center">
+                <a class="d-block mb-4 h-100">
+                      <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/FY43kGZZ/product8.jpg" alt="">
+                    </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-6 text-center">
+                <a class="d-block mb-4 h-100">
+                      <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/LJtkxGXw/product9.jpg" alt="">
+                    </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-6 text-center">
+                <a class="d-block mb-4 h-100">
+                      <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/4K4cBdjH/product10.jpg" alt="">
+                    </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-6 text-center">
+                <a class="d-block mb-4 h-100">
+                      <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/HJSyKmCZ/product11.jpg" alt="">
+                    </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-6 text-center">
+                <a class="d-block mb-4 h-100">
+                      <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/hzfdRYDS/product12.jpg" alt="">
+                    </a>
+              </div>
+            </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-6 text-center">
-            <a class="d-block mb-4 h-100">
-                  <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/LYXz6XTF/product3.jpg" alt="">
-                </a>
-          </div>
-          <div class="col-lg-3 col-md-4 col-6 text-center">
-            <a class="d-block mb-4 h-100">
-                  <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/ygb0JHQg/product4.jpg" alt="">
-                </a>
-          </div>
-          <div class="col-lg-3 col-md-4 col-6 text-center">
-            <a class="d-block mb-4 h-100">
-                  <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/MffVVFNs/product5.jpg" alt="">
-                </a>
-          </div>
-          <div class="col-lg-3 col-md-4 col-6 text-center">
-            <a class="d-block mb-4 h-100">
-                  <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/jWRHmvn5/product6.jpg" alt="">
-                </a>
-          </div>
-          <div class="col-lg-3 col-md-4 col-6 text-center">
-            <a class="d-block mb-4 h-100">
-                  <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/8FwRSWLb/product7.jpg" alt="">
-                </a>
-          </div>
-          <div class="col-lg-3 col-md-4 col-6 text-center">
-            <a class="d-block mb-4 h-100">
-                  <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/FY43kGZZ/product8.jpg" alt="">
-                </a>
-          </div>
-          <div class="col-lg-3 col-md-4 col-6 text-center">
-            <a class="d-block mb-4 h-100">
-                  <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/LJtkxGXw/product9.jpg" alt="">
-                </a>
-          </div>
-          <div class="col-lg-3 col-md-4 col-6 text-center">
-            <a class="d-block mb-4 h-100">
-                  <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/4K4cBdjH/product10.jpg" alt="">
-                </a>
-          </div>
-          <div class="col-lg-3 col-md-4 col-6 text-center">
-            <a class="d-block mb-4 h-100">
-                  <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/HJSyKmCZ/product11.jpg" alt="">
-                </a>
-          </div>
-          <div class="col-lg-3 col-md-4 col-6 text-center">
-            <a class="d-block mb-4 h-100">
-                  <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/hzfdRYDS/product12.jpg" alt="">
-                </a>
+          <!-- /.container -->
+
+        </div>
+        <!-- END OF WORK SECTION -->
+
+
+        <!-- START CALL-TO-ACTION SECTION -->
+        <div id="call-to-action-section" class="container-fluid">
+          <div class="text">
+            <h1>Call Us Today for a Quote!</h1>
+            <p>Give us a call and we can come to a pricing agreement.</p>
+            <p>(Hablamos Español)</p>
+            <h5>Denos una llamada y le daremos un precio.<h5>
+              <a class="telephone" href="tel:+17143173860">714-317-3860</a>
           </div>
         </div>
-      </div>
-      <!-- /.container -->
 
-    </div>
-    <!-- END OF WORK SECTION -->
-
-
-    <!-- START CALL-TO-ACTION SECTION -->
-    <div id="call-to-action-section" class="container-fluid">
-      <div class="text">
-        <h1>Call Us Today for a Quote!</h1>
-        <p>Give us a call and we can come to a pricing agreement.</p>
-        <p>(Hablamos Español)</p>
-        <h5>Denos una llamada y le daremos un precio.<h5>
-          <a class="telephone" href="tel:+17143173860">714-317-3860</a>
-      </div>
-    </div>
-
-    <!-- END CALL-TO-ACTION SECTION -->
+        <!-- END CALL-TO-ACTION SECTION -->
 
     <!-- START OF FOOTER -->
     <footer>
