erased the menu in mobile version and fixed the why us box that was leaning to the left, its now centered.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   </head>
   <body>
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">JP Machine</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,18 +34,13 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html#call-to-action-section">Contact</a>
           </li>
-
-          <!-- <li class="nav-item">
-            <a class="nav-link " href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li> -->
         </ul>
-        <!-- will create a responsive navbar in wordpress -->
       </div>
     </nav>
 
 
     <div id="about-section" class="container-fluid">
-           <div class="text">
+           <div class="text container">
              <h1>About Us:</h1>
              <p> We are a Manual Lathe Milling and Welding company that can repair, create, and weld any part you might need. We know English and Spanish and are located in Orange County.</p>
              <a class="telephone" href="tel:+17143173860"><button type="button" class="btn btn-primary">Contact Us</button></a>
@@ -61,23 +57,20 @@
           </div>
           <div class="boxes-area text container">
             <h1>Why us?</h1>
-            <div class="boxes row justify-content-between text-center">
+            <div class="boxes row text-center">
+
               <div class="box col col-lg-3 col-sm-6 col-xs-12 text-center ">
                 <i class="fa fa-trophy" aria-hidden="true"></i>
                 <h4>Quality</h4>
                 <p>Everything we make is quality work and nothing less. We have high standard for our work.</p>
               </div>
-              <div class="">
 
-              </div>
               <div class="box col col-lg-3 col-sm-6 col-xs-12 text-center">
                 <i class="fa fa-clock-o" aria-hidden="true"></i>
                 <h4>Timely</h4>
                 <p>Every order is given on the agreed timeframe everytime.</p>
               </div>
-              <div class="">
 
-              </div>
               <div class="box col col-lg-3 col-sm-12 col-xs-12 text-center">
                 <i class="fa fa-book" aria-hidden="true"></i>
                 <h4>Experience</h4>
@@ -225,6 +218,8 @@
 
     </footer>
 
+  <script type="text/javascript">
 
+  </script>
   </body>
 </html>
