added gallery model for project images

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>JP Machine</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/model.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Inria+Serif|Kulim+Park|Montserrat|Ibarra+Real+Nova|Rock+Salt&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/70d2219815.js" crossorigin="anonymous"></script>
@@ -88,79 +89,36 @@
           <div class="container">
             <div class="writing row text-center d-block">
               <h1>Work Done:</h1>
-              <p></p>
+              <br>
+              <br>
             </div>
 
             <hr class="mt-2 mb-5">
 
-            <div class="row text-center text-lg-left">
-
-              <div class="col-lg-3 col-md-4 col-6 text-center">
-                <a class="d-block mb-4 h-100">
-                      <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/LJtkxGXw/product1.jpg" alt="">
-                    </a>
-              </div>
-              <div class="col-lg-3 col-md-4 col-6 text-center">
-                <a class="d-block mb-4 h-100">
-                      <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/s1LJxpq6/product2.jpg" alt="">
-                    </a>
-              </div>
-              <div class="col-lg-3 col-md-4 col-6 text-center">
-                <a class="d-block mb-4 h-100">
-                      <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/LYXz6XTF/product3.jpg" alt="">
-                    </a>
-              </div>
-              <div class="col-lg-3 col-md-4 col-6 text-center">
-                <a class="d-block mb-4 h-100">
-                      <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/ygb0JHQg/product4.jpg" alt="">
-                    </a>
-              </div>
-              <div class="col-lg-3 col-md-4 col-6 text-center">
-                <a class="d-block mb-4 h-100">
-                      <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/MffVVFNs/product5.jpg" alt="">
-                    </a>
-              </div>
-              <div class="col-lg-3 col-md-4 col-6 text-center">
-                <a class="d-block mb-4 h-100">
-                      <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/jWRHmvn5/product6.jpg" alt="">
-                    </a>
-              </div>
-              <div class="col-lg-3 col-md-4 col-6 text-center">
-                <a class="d-block mb-4 h-100">
-                      <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/8FwRSWLb/product7.jpg" alt="">
-                    </a>
-              </div>
-              <div class="col-lg-3 col-md-4 col-6 text-center">
-                <a class="d-block mb-4 h-100">
-                      <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/FY43kGZZ/product8.jpg" alt="">
-                    </a>
-              </div>
-              <div class="col-lg-3 col-md-4 col-6 text-center">
-                <a class="d-block mb-4 h-100">
-                      <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/LJtkxGXw/product9.jpg" alt="">
-                    </a>
-              </div>
-              <div class="col-lg-3 col-md-4 col-6 text-center">
-                <a class="d-block mb-4 h-100">
-                      <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/4K4cBdjH/product10.jpg" alt="">
-                    </a>
-              </div>
-              <div class="col-lg-3 col-md-4 col-6 text-center">
-                <a class="d-block mb-4 h-100">
-                      <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/HJSyKmCZ/product11.jpg" alt="">
-                    </a>
-              </div>
-              <div class="col-lg-3 col-md-4 col-6 text-center">
-                <a class="d-block mb-4 h-100">
-                      <img class="img-fluid img-thumbnail" src="https://i.postimg.cc/hzfdRYDS/product12.jpg" alt="">
-                    </a>
-              </div>
+            <div class="grid row justify-content-md-center d-block">
+              <!-- <img src="https://i.postimg.cc/LJtkxGXw/product1.jpg"> -->
+              <img src="https://i.postimg.cc/zGCFfG9q/product1.jpg">
+              <img src="https://i.postimg.cc/R0vQJzBK/product2.jpg">
+              <img src="https://i.postimg.cc/Hxxw34jL/product3.jpg">
+              <img src="https://i.postimg.cc/nM8qHy2s/product4.jpg">
+              <img src="https://i.postimg.cc/668SpCzw/product5.jpg">
+              <img src="https://i.postimg.cc/zfpwnPzM/product6.jpg">
+              <img src="https://i.postimg.cc/Qtypz9WJ/product7.jpg">
+              <img src="https://i.postimg.cc/c1Pzg653/product8.jpg">
+              <img src="https://i.postimg.cc/90wGHmd5/product9.jpg">
+              <img src="https://i.postimg.cc/yY9bFBwb/product10.jpg">
+              <img src="https://i.postimg.cc/rwkYj3TF/product11.jpg">
+              <img src="https://i.postimg.cc/T3JN402j/product12.jpg">
             </div>
+
           </div>
           <!-- /.container -->
 
         </div>
         <!-- END OF WORK SECTION -->
+
+
+
 
 
         <!-- START CALL-TO-ACTION SECTION -->
@@ -218,8 +176,6 @@
 
     </footer>
 
-  <script type="text/javascript">
-
-  </script>
+  <script src="app.js"></script>
   </body>
 </html>
