added padding to company name and resized images and made the height smaller for the main header

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
              <h1>About Us:</h1>
              <p> We are a Manual Lathe Milling and Welding company that can repair, create, and weld any part you might need. We know English and Spanish and are located in Orange County.</p>
              <a class="telephone" href="tel:+17143173860"><button type="button" class="btn btn-primary">Contact Us</button></a>
-
            </div>
         </div>
 
@@ -97,18 +96,19 @@
 
             <div class="grid row justify-content-md-center d-block">
               <!-- <img src="https://i.postimg.cc/LJtkxGXw/product1.jpg"> -->
-              <img src="https://i.postimg.cc/zGCFfG9q/product1.jpg">
-              <img src="https://i.postimg.cc/R0vQJzBK/product2.jpg">
-              <img src="https://i.postimg.cc/Hxxw34jL/product3.jpg">
-              <img src="https://i.postimg.cc/nM8qHy2s/product4.jpg">
-              <img src="https://i.postimg.cc/668SpCzw/product5.jpg">
-              <img src="https://i.postimg.cc/zfpwnPzM/product6.jpg">
-              <img src="https://i.postimg.cc/Qtypz9WJ/product7.jpg">
-              <img src="https://i.postimg.cc/c1Pzg653/product8.jpg">
-              <img src="https://i.postimg.cc/90wGHmd5/product9.jpg">
-              <img src="https://i.postimg.cc/yY9bFBwb/product10.jpg">
-              <img src="https://i.postimg.cc/rwkYj3TF/product11.jpg">
-              <img src="https://i.postimg.cc/T3JN402j/product12.jpg">
+              <img src="https://i.postimg.cc/cLLPXqX6/product1.jpg">
+              <img src="https://i.postimg.cc/yYPwm6hw/product2.jpg">
+              <img src="https://i.postimg.cc/g0f5zxd6/product3.jpg">
+              <img src="https://i.postimg.cc/d1rfLJtN/product4.jpg">
+              <img src="https://i.postimg.cc/T1x4bBKd/product5.jpg">
+              <img src="https://i.postimg.cc/jS3m18Fc/product6.jpg">
+              <img src="https://i.postimg.cc/mrcJWYxs/product7.jpg">
+              <img src="https://i.postimg.cc/Wz7fwSZM/product8.jpg">
+              <img src="https://i.postimg.cc/J73g87FG/product9.jpg">
+              <img src="https://i.postimg.cc/9FWkQ531/product10.jpg">
+              <img src="https://i.postimg.cc/wjMbDXjm/product11.jpg">
+              <img src="https://i.postimg.cc/nhWS2XXw/product12.jpg">
+
             </div>
 
           </div>
@@ -128,7 +128,7 @@
             <p>Give us a call and we can come to a pricing agreement.</p>
             <p>(Hablamos Español)</p>
             <h5>Denos una llamada y le daremos un precio.<h5>
-              <a class="telephone" href="tel:+17143173860">714-317-3860</a>
+              <a class="telephone" href="tel:+17141231234">714-123-1234</a>
           </div>
         </div>
 
@@ -145,7 +145,7 @@
                   <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 contact-links">
                       <h3> Contact </h3>
                       <ul>
-                        <li><a class="telephone" href="tel:+17143173860">714-317-3860</a></li>
+                        <li><a class="telephone" href="tel:+17141231234">714-123-1234</a></li>
                         <li><a class="email" href="mailto:jpmachinestanton@gmail.com"> jpmachinestanton@gmail.com </a></li>
                         <br/>
                         <li> <p> Located in Stanton, California </p> </li>
